--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
 
     <img class="btc-trading" src="Screenshot btc.jpg" alt="btc trading view">
+    <img class="nmad" src="logo.png" alt="nmad">
+    <img class="nmad1" src="c:\Users\Pooyan\Desktop\APP\cod\جشنواره خارزمی\test\OIP.jfif" alt="nmad1">
     
     <div class="main-content">
         <!-- منوی ناوبری -->
