--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <img class="btc-trading" src="Screenshot btc.jpg" alt="btc trading view">
     <img class="nmad" src="logo.png" alt="nmad">
-    <img class="nmad1" src="OIP.jfif" alt="nmad1">
+    <img class="nmad1" src="OIP.jpg" alt="nmad1">
     
     <div class="main-content">
         <!-- منوی ناوبری -->
